--- a/static/style.css
+++ b/static/style.css
@@ -9,16 +9,17 @@ body {
 
 .box {
     
-    position: fixed;
+    position: absolute;
     display: inline;
     top: 66%;
     left: 50%;
     transform: translate(-50%, -50%);
     
-  }
+    
+     }
   
   .box select {
-    background-color: #0563af;
+    background-color: hsl(0, 0%, 0%);
     color: white;
     padding: 12px;
     width: 250px;
@@ -28,6 +29,9 @@ body {
     -webkit-appearance: button;
     appearance: button;
     outline: none;
+    border-radius: 10px;
+    text-align: center;
+    
   }
   
   .box::before {
@@ -48,27 +52,47 @@ body {
   .box:hover::before {
     color: rgba(255, 255, 255, 0.6);
     background-color: rgba(255, 255, 255, 0.2);
+    
+
   }
+
+  .box select:hover {
+    background-color: hwb(189 3% 61%);
+    cursor: pointer;
+
+    transition: background-color 900ms; color 900ms;
+  }
+
+  
   
   .box select option {
     padding: 30px;
   }
 
-  input{
+  button{
     
     color: white;
     width: 100px;
     height: 50px;
-    background-color: #0563af;
+    background-color: #010b13;
     font-size: 20px;
     border: none;
-    margin-top: 80px;
-    
-    
-    
+    margin-top: 3rem;
+    border-radius: 10px;
+
     
   }
 
+  button:hover {
+    background-color: hwb(189 3% 61%);
+    cursor: pointer;
+
+    transition: background-color 900ms; color 900ms;
+  }
+
+
+
+  
   .przycisk {
     
 
@@ -98,3 +122,4 @@ h1{
     margin-bottom: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
